fix random scrollbars

--- a/project_wpr.client/src/pages/Dashboard.css
+++ b/project_wpr.client/src/pages/Dashboard.css
@@ -27,7 +27,8 @@
 }
 
 .scroll {
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 
